# TODO

./: README.md
examples/CodingForSSDs/: 3-PagesBlocksAndTheFlashTranslationLayer.md
examples/HowToCookAKeyValueDB/: 0-ImplementingAKeyValueStore.md
examples/LinuxCore/: note.md
examples/Linux内核/: note.md
examples/cmake-tutorial/cmake-3.24.0-tutorial-source/Step1/: a.out
examples/spdk/: 0-Introduce.md
notebook/DesigningDataIntensiveApplications/: DesignDataIntensiveApplication.md
notebook/EBS/: EC和三副本.md
notebook/cmake-tutorial/cmake-3.24.0-tutorial-source/Step1/: CMakeLists.txt
notebook/codeCapsule/: ActiveAppearanceModelsinC++.md  AutomaticRepositoryAndWebServerSyncchronizationOnCommit.md  EfficientCountingWithMapReduce.md  FourWeeksWithOpenCV.md  GamificationTheNextRevolution?.md  ImageSegmentationUsingTheLambertainColorModel.md  IntroducitonToMapReduce.md  Knock-knockSecureYourSSHServerUsingPortKnocking.md  SimulatedAnnealingAppliedToTheTravelingSalesmanProblem.md  The20-80ProductivityRule.md  TheGoldRushOfSoftware.md  TomatwoTheMeanTweetingMachine.md
notebook/etcd/: etcd.md
notebook/spdk/: 1-UserGuides.md
notebook/tpclog/分布式存储/: 0-index.md  1-整体架构.md  2-grpc.md  3-DataNode注册与心跳.md  4-dfs客户端工程.md  5-内存文件目录树.md  6-写EditsLog日志.md  7-同步EditsLog日志.md
